<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Motion" Id="{1d624cb8-f302-42ff-a7f6-4bbd71e81c9d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	M1Motor		:	ST_AX8108; //M1 Motor - vertical Axis Stage Collection
	M2Motor		:	ST_EL7211; //M2 Motor - vertical Axis Sample Recovery
	M3Motor		:	ST_EL7211; //M3 Motor - Horizontal Axis Sample Recovery
	
	M4Valve1		:	ST_EP9208;
	M5Valve2		:	ST_EP9208;
	M6Valve3		:	ST_EP9208;
	M7Valve4		:	ST_EP9208;
	M8Valve5		:	ST_EP9208;
	
	M1STOActiveMonitoring		AT %I* 	: BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>